Fixing logo set to 'margin: auto' on small plus screen

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -64,6 +64,12 @@
   margin: auto;
 }
 
+@include media('>=small-plus-screen') {
+  .page-header__link {
+    margin: 0;
+  }
+}
+
 .page-header__logo {
   max-width: 300px;
 }
